# langchain-token-saver

./: .gitignore  README.md  pyproject.toml  requirement.md  skills-lock.json
examples/: benchmark_traces.json  quickstart.py
src/langchain_token_saver/: __init__.py  benchmark.py  brevity.py  capabilities.py  cli.py  compaction.py  events.py  messages.py  safety.py  tokenization.py  types.py  wrapper.py
tests/: test_core.py
