[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "langchain-token-saver"
version = "0.1.0"
description = "Safe, measurable token optimization for LangChain chat models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "langchain-token-saver contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["langchain-core>=0.3,<2"]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
langchain-token-saver = "langchain_token_saver.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_token_saver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
